fixed issue where login/signup form not centered on large screens

--- a/src/CSS/layout.css
+++ b/src/CSS/layout.css
@@ -26,6 +26,10 @@ input[type="number"]:focus {
   box-shadow: 0 0 0 4px #b9d3fa;
 }
 
+.container {
+  max-width: 1140px;
+}
+
 .custom-btn {
   border: none;
   color: #333;
